# LUMES

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: CONVERSATION_NOTES.md  PLAN.md
results/runs/conservative_broad_exp2_g27b/: compare_config.json  compare_runs.csv  compare_significance.csv  compare_summary.csv
results/runs/conservative_broad_exp2_g27b/raw/: compare_decisions.csv
results/runs/final/: compare_config.json  compare_runs.csv  compare_significance.csv  compare_summary.csv
results/runs/neutral_full/: exp1_best.json  exp1_runs.csv  exp1_summary.csv  exp2_runs.csv  exp2_significance.csv  exp2_summary.csv  exp3_determinism.csv
results/runs/v4_conservative_prompt/: babysit_log.md  exp1_best.json  exp1_runs.csv  exp1_summary.csv  exp2_runs.csv  exp2_significance.csv  exp2_summary.csv  exp3_determinism.csv
results/runs/v5_aggressive_prompt/: babysit_log.md  exp1_best.json  exp1_runs.csv  exp1_summary.csv  exp2_runs.csv  exp2_significance.csv  exp2_summary.csv  exp3_determinism.csv
results/runs/v6_prompt_compare/: babysit_log.md  compare_config.json  compare_runs.csv  compare_significance.csv  compare_summary.csv
src/: __init__.py  backend.py  config.py  dataset.py  metrics.py  phmlc_bridge.py  prompting.py  runner.py  scenario.py  simulator.py  tracking.py
src/experiments/: _cli.py  exp1_select_llm.py  exp2_vs_baselines.py  exp3_determinism.py  exp_prompt_compare.py  plots.py  run_all.py  sanity_check.py  smoke_bridge.py
src/policies/: __init__.py  arima_policy.py  base.py  early_stopping.py  last_seen.py  llm.py  oracle.py  random_policy.py
src/tests/: test_features.py  test_metrics.py  test_no_leak.py  test_parser.py  test_policies.py  test_simulator.py
(+13 files in other folders)
